# EmbeddedBasecamp

./: .gitignore  .gitmodules  readme.md
exercise1/: sh_create_test.sh  test_script.sh  test_script.sh.save  test_script.sh.save.1  test_script.sh.save.2  test_script.sh.save.3  test_script.sh.save.4
exercise10/demo_sysfs/: Makefile  xxe.c  xxm.c  xxx.c
exercise10/part01/: Makefile  rw.c
exercise10/part02/: Makefile  strings_processor.c
exercise10/part03/: Makefile  convertor_mode_enum.h  rw.c  strings_processor.c  sysfs_handler.c
exercise11/part01/: Makefile  dyndev.c  fixdev.c
exercise11/part02/: Makefile  dev.h  dyndev.c
exercise12/: Makefile  ds3231_device.dts  ds3231_driver.c  ds3231_registers.h
exercise13/: Makefile  hrtimer.c  interv.c  mytimer.c  tick.c
exercise14/: Makefile  userspace_mem_test.c
exercise14/part02/: memtest.c  memtim.c
exercise15/: Makefile  mod_ser.c  mod_tasklet.c
exercise2/: script.sh
exercise3/: readme.md
exercise4/: CMakeLists.txt  Makefile  game  game.c  main.c  valgrind-report.md
exercise4/game/: CMakeLists.txt  game_core.c  game_core.h
exercise4/linked_list/: CMakeLists.txt  linked_list.h
exercise6/: CMakeLists.txt  RPI.cmake  main.cpp  rsync.sh
exercise7/: time_script.sh
exercise8/: README.md  launch_qemu.sh
exercise9/part01/: Makefile  ex01.c
exercise9/part02/: Makefile  ex02.c  test_ex02.c
final_task/: readme.md
final_task/display_driver/: Makefile  debug_read_from_debufs.sh  display_driver_apply_overlay.sh  fonts.h  gc9a01.c  gc9a01.h  gc9a01_chardev.c  gc9a01_chardev.h  gpio_module.c  gpio_module.h  module_main.c  spi_module.c  spi_module.h
final_task/display_test_app/: CMakeLists.txt  main.cpp
final_task/userspace_app/: CMakeLists.txt  ap_application.cpp  ap_application.hpp  conanfile.txt  main.cpp
final_task/userspace_app/logger/: logger_service_impl.cpp
final_task/userspace_app/lvgl_lib/: CMakeLists.txt  gs_lvgl_service.cpp  gs_lvgl_service.hpp
final_task/userspace_app/lvgl_lib/application_view/: CMakeLists.txt  example.cpp  example.h  example1.cpp
final_task/userspace_app/lvgl_lib/application_view/linked_list/: CMakeLists.txt  linked_list.h
final_task/userspace_app/lvgl_lib/application_view/reminders_model/: CMakeLists.txt  reminders_model.c  reminders_model.h
final_task/userspace_app/lvgl_lib/lvgl_driver_backend/: CMakeLists.txt  lv_drv_conf.h
final_task/userspace_app/lvgl_lib/lvgl_library/: CMakeLists.txt  lv_conf.h
final_task/userspace_app/lvgl_lib/platform/: CMakeLists.txt  gs_platform_layer.cpp  gs_platform_layer.hpp
raspi_config_files/: config.txt  wpa_supplicant.conf
task01/: task_solution.sh
task2/: guess_the_number.sh  readme.md
task3/: Makefile
task3/src/: control  decoder.c  encoder.c
task4/: Makefile  README.md  buttons_module.c  buttons_module.h  demo_lcd.c  fonts.c  fonts.h  gc9a01.c  gc9a01.h  gpio_module.c  gpio_module.h  ili9341.h  main.c  spi_module.c  spi_module.h
task5/part01/: Makefile  converter_currency.c
task5/part02/: Makefile  currency_converter_common.h  currency_converter_module.c  currency_conveter.c  currency_coverter.c  module_common.h  module_main.c  procfs_handler.c  sysfs_handler.c
task6/: Makefile  module_common.h  module_main.c  procfs_handler.c  sysfs_handler.c  task_main_module.c
task7/: Makefile  module_common.h  module_main.c  procfs_handler.c  procfs_handler.h  random_timer_handler.c  random_timer_handler.h  sysfs_handler.c  sysfs_handler.h  test_timer_module.sh  timer_track_module.c  timer_track_module.h
task8/: CMakeLists.txt  main.c  report.txt
task8/kernel_module/: Makefile  module_common.h  module_main.c  reminders_model.c  reminders_model.h  task_notifications_timer.sh  tests.h
task8/linked_list/: CMakeLists.txt
task8/reminders_model/: CMakeLists.txt  reminders_model.c  reminders_model.h
task9/: Makefile  module_main.c
